feat: Create database using docker-compose.

--- a/services/envs/development.env
+++ b/services/envs/development.env
@@ -1,21 +1,21 @@
 NODE_ENV=development
-PORT=
+PORT=3333
 
 JWT_SECRET=
 JWT_EXPIRES_IN=28800s
 
-DB_TYPE=
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_TYPE=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5433
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=MyPass
+POSTGRES_DB=postgres
 
-MAIL_SMTP_HOSTNAME=
-MAIL_PORT=
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_FROM=
+MAIL_SMTP_HOSTNAME=smtp.ethereal.email
+MAIL_PORT=587
+MAIL_USERNAME=josh55@ethereal.email
+MAIL_PASSWORD=Fqtq4eEc5M6HYHmGwW
+MAIL_FROM=scaffold@mail.com.br
 
 FRONTEND_BASE_URL=
 BACKEND_BASE_URL=http://localhost:3333
