--- a/environments/envs/development.env
+++ b/environments/envs/development.env
@@ -1,6 +1,6 @@
-DB_TYPE=
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_TYPE=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5433
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=MyPass
+POSTGRES_DB=postgres
