--- a/services/envs/production.env
+++ b/services/envs/production.env
@@ -4,12 +4,12 @@ PORT=
 JWT_SECRET=
 JWT_EXPIRES_IN=
 
-DB_TYPE=
-DB_HOST=
-DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_TYPE=postgres
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 
 MAIL_SMTP_HOSTNAME=
 MAIL_PORT=
